--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,63 @@
-<h1>Eli Hansen</h1>
+<h1>Welcome to CSE Motors!</h1>
+
+<div class="hero">
+    <picture>
+        <source srcset="/images/vehicles/delorean.jpg" media="(min-width: 1200px)">
+        <source srcset="/images/vehicles/delorean.jpg" media="(min-width: 768px)">
+        <img src="/images/vehicles/delorean.jpg" alt="delorean vehicle">
+    </picture>
+    <div class="hero-overlay">
+        <h2 class="vehicle-model">DMC Delorean</h2>
+        <ul class="vehicle-features">
+            <li>3 Cup holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+        </ul>
+        <a href="placeholder">
+            <img src="/images/site/own_today.png" alt="own today button" class="own-today-button">
+        </a>
+    </div>
+</div>
+
+<section class="reviews-section">
+    <h3>DMC Delorean Reviews</h3>
+    <div class="reviews">
+        <ul>
+            <li>"So, fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </div>
+</section>
+
+<section class="upgrades-section">
+    <h3>Delorean Upgrades</h3>
+    <div class="upgrades-layout">
+        <div class="upgrade-item">
+            <div class="upgrade-box">
+                <img src="/images/upgrades/flux-cap.png" alt="flux capacitor">
+            </div>
+            <p><a href="placeholder">Flux Capacitor</a></p>
+        </div>
+        <div class="upgrade-item">
+            <div class="upgrade-box">
+                <img src="/images/upgrades/flame.jpg" alt="flame decals">
+            </div>
+            <p><a href="placeholder">Flame Decals</a></p>
+        </div>
+        <div class="upgrade-item">
+            <div class="upgrade-box">
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="bumper sticker">
+            </div>
+            <p><a href="placeholder">Bumper Sticker</a></p>
+        </div>
+        <div class="upgrade-item">
+            <div class="upgrade-box">
+                <img src="/images/upgrades/hub-cap.jpg" alt="hub cap">
+            </div>
+            <p><a href="placeholder">Hub Caps</a></p>
+        </div>
+    </div>
+</section>
